stripped css to solve spacing issue. rebuilding css. changed where certian text element live

--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,48 @@ body {
 /* GRID */
 .parent {
     display: grid;
+    height: 100vh;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     }
 
-.div1 { grid-area: 1 / 1 / 2 / 2; }
-.div2 { grid-area: 1 / 2 / 2 / 3; }
-.div3 { grid-area: 1 / 3 / 2 / 4; }
-
+.div1 { grid-area: 1 / 1 / 2 / 2;
+    background-color: lightcyan;}
+.div2 { grid-area: 1 / 2 / 2 / 3; 
+    background-color: lightskyblue;}
+.div3 { grid-area: 1 / 3 / 2 / 4; 
+    background-color: lightsalmon;}
 
     /* END GRID */
+
+#navGrid {
+    background-color: #CCC4FA;
+    color: #80AD7F
+}
+
+#stageGrid {
+    background-color:#fae9dc ;
+    min-width: 0;
+}
+
+#poolGrid {
+    background-color: #7E76AD;
+    color: #ADFAAA
+    
+}
+
+
+
+
+
+
+
+
+
     /* GRID STYLES */
-    #navGrid {
+    /* #navGrid {
         background-color:  rgb(51, 63, 78);
         color: rgb(132, 157, 195); 
         min-width: 300px;
@@ -56,7 +84,7 @@ body {
 #levelContainer{ 
     display: flex;
     flex-flow: row wrap;
-    /* justify-content: space-around; */
+
 }
     
     #colorBox{   
@@ -96,4 +124,4 @@ input:focus {
                 
     }
 }
-                
+                 */
